--- a/glossary.tex
+++ b/glossary.tex
@@ -47,6 +47,7 @@
 \newacronym{LQG}{LQG}{Linear Quadratic Gaussian}
 
 \newacronym{MV}{MV}{Munipulated Variable}
-\newacronym{OV}{OV}{Output Variable}
+\newacronym{MO}{MO}{Measured Output}
+% \newacronym{MOsp}{MO\subscript{sp}}{Measured Output Setpoint}
 
 
