--- a/lit_study/lit_study.tex
+++ b/lit_study/lit_study.tex
@@ -26,6 +26,12 @@
 
 \section{System Identification}
 \section{Control systems}
+
+    
+    % ?? Lit study: include different types of \gls{MPC}, e.g. DMC, MAC
+    % ?? different types of models \cite{}, 
+    % ?? See \cite{Garcia1989} for good example of different implementations with different models
+    
 \section{System Design}
 Blok diagram
 komponente
