--- a/glossary.tex
+++ b/glossary.tex
@@ -48,6 +48,8 @@
 
 \newacronym{MV}{MV}{Munipulated Variable}
 \newacronym{MO}{MO}{Measured Output}
+\newacronym{SISO}{SISO}{Single Input Single Output}
+
 % \newacronym{MOsp}{MO\subscript{sp}}{Measured Output Setpoint}
 
 
